--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	},
 	"require": {
 		"doctrine/dbal": "^2.5",
-		"symfony/console": "^2.6|^3.0"
+		"symfony/console": "^2.6|^3.0",
+		"influxdb/influxdb-php": "^1.14"
 	},
 	"bin": ["dbcopy.php"],
 	"autoload": {
