--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	},
 	"require": {
 		"doctrine/dbal": "^2.5",
-		"symfony/console": "^2.6|^3.0"
+		"symfony/console": "^4.0"
 	},
 	"bin": ["dbcopy.php"],
 	"autoload": {
