--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		"symfony/console": "^4.0",
 		"influxdb/influxdb-php": "^1.14"
 	},
-	"bin": ["dbcopy.php"],
+	"bin": ["dbcopy"],
 	"autoload": {
 		"psr-0": {
 			"DatabaseCopy\\": "./"
