--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	"require": {
 		"doctrine/dbal": "^2.5",
 		"symfony/console": "^4.0",
-		"influxdb/influxdb-php": "^1.14"
+		"influxdb/influxdb-php": "^1.14",
+		"symfony/yaml": "^4.0"
 	},
 	"bin": ["dbcopy"],
 	"autoload": {
