Adopt to yaml config and fix target identifier encoding

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
 	},
 	"bin": ["dbcopy"],
 	"autoload": {
-		"psr-0": {
-			"DatabaseCopy\\": "./"
+		"psr-4": {
+			"DatabaseCopy\\": "src/"
 		}
 	}
 }
