--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"email": "cpuidle@gmx.de"
 	},
 	"require": {
-		"doctrine/dbal": "^2.5",
+		"doctrine/dbal": "^2.5|^3.0",
 		"symfony/console": "^4.0|^5.0",
 		"influxdb/influxdb-php": "^1.14",
 		"symfony/yaml": "^4.|^5.0"
